# control_panel-release

./: CMakeLists.txt  README.rst  bloom.conf  debian.store  package.xml  patches.conf  ros-groovy-control-panel.spec  rpm.store  sources
debian/: changelog  control  gbp.conf  rules
include/control_panel/: call_service_dialog.h  component_dialogs.h  data_pane.h  display_pane.h  globals.h  main_tab.h  main_window.h  node_manager.h  robot_config.h  robot_config_file_dialog.h  robot_tab.h  robot_widget.h  velocity_scale_dialog.h
include/control_panel/nodes/: command_node.h  control_node.h  diagnostic_node.h  disparity_image_node.h  gps_node.h  grid_cells_node.h  image_node.h  imu_node.h  joint_state_node.h  joint_trajectory_node.h  joystick_node.h  laser_node.h  map_node.h  odometry_node.h  path_node.h  pose_node.h  qt_node.h  range_node.h
include/control_panel/widgets/: artificial_horizon.h  attitude_indicator.h  battery_display.h  gps_display.h  heading_indicator.h  image_viewer.h  imu_display.h  joint_state_display.h  odometry_display.h
launch/: control_panel.launch
resources/: images.qrc  robots.qrc
resources/robots/: ardrone1.xml  ardrone2.xml  ardrone3.xml  armbot1.xml  armbot2.xml  asctec1.xml  brady_bot.xml  erratic.xml  fat_man.xml  fsm1.xml  ghetto_bot1.xml  imu_comparison.xml  little_boy.xml  nao.xml  pr2.xml  smp1.xml  smp2.xml  test_robot.xml  turtlebot.xml
src/: call_service_dialog.cpp  component_dialogs.cpp  data_pane.cpp  display_pane.cpp  main.cpp  main_tab.cpp  main_window.cpp  node_manager.cpp  robot_config.cpp  robot_config_file_dialog.cpp  robot_tab.cpp  robot_widget.cpp  velocity_scale_dialog.cpp
src/nodes/: command_node.cpp  control_node.cpp  diagnostic_node.cpp  disparity_image_node.cpp  gps_node.cpp  image_node.cpp  imu_node.cpp  joint_state_node.cpp  joint_trajectory_node.cpp  joystick_node.cpp  laser_node.cpp  map_node.cpp  odometry_node.cpp  pose_node.cpp  qt_node.cpp  range_node.cpp
src/widgets/: artificial_horizon.cpp  attitude_indicator.cpp  battery_display.cpp  gps_display.cpp  heading_indicator.cpp  image_viewer.cpp  imu_display.cpp  joint_state_display.cpp  odometry_display.cpp
