<?xml version="1.0"?>
<package>
  <name>control_panel</name>
  <version>0.4.4</version>
  <description>The SDSM&amp;T SRS Control Panel</description>

  <maintainer email="matthew.w.richard@gmail.com">Matt Richard</maintainer>
  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/control_panel</url> -->

  <author email="matthew.w.richard@gmail.com">Matt Richard</author>
  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>libqt4</run_depend>
</package>
